infra/k8s/non-persistent/jitsi/kustomize/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: jitsi
  name: jitsi
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: jitsi
  template:
    metadata:
      labels:
        k8s-app: jitsi
    spec:
      volumes:
        - name: jitsi-accounts-storage
          ### for sync with the local machine ###
          # hostPath:
          #   path: /mnt/Data/milms/auth/files
          # path: /hosthome/odysseas/mnt-milms/auth/files
          ### for sync with pvc on the local machine ###
          persistentVolumeClaim:
            claimName: jitsi-accounts-pvc
      containers:
        - name: jicofo
          image: jitsi/jicofo:stable-6826
          imagePullPolicy: IfNotPresent
        - name: prosody
          image: jitsi/prosody:stable-6826
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: jitsi-accounts-storage
              # mountPath: /config/data/jitsi%2emilms%2etech/accounts
              mountPath: /config/data
        - name: web
          image: jitsi/web:stable-6726
          # image: otsili/jitsi-meet
          imagePullPolicy: IfNotPresent
        - name: jvb
          image: jitsi/jvb:stable-6826
          imagePullPolicy: IfNotPresent
      serviceAccountName: jitsi
