infra/k8s/non-persistent/jitsi/kustomize/ingress-jitsi.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jitsi
  namespace: jitsi
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  defaultBackend:
    service:
      name: web
      port:
        number: 80
  tls:
    - hosts:
        - meet.milms.tsilingeridis.eu
        # - www.meet.milms.tsilingeridis.eu
      secretName: meet-milms-tsilingeridis.eu
  rules:
    - host: meet.milms.tsilingeridis.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    # - host: www.meet.milms.tsilingeridis.eu
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: web
    #             port:
    #               number: 80
